<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abhishekraj.android.mysharedpreferences.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#ffddcc"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/checkBoxPreferenceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aabbbb"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/checkBoxPreferenceSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/checkBoxPreferenceSummary" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/checkBoxStatusText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="checked/unchecked" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listPreferenceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listPreferenceSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="@string/listPreferenceSummary" />

            <RadioGroup
                android:id="@+id/listPreferenceRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/listPreferenceRadioButtonValue1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listPreferenceRadioButtonValue1" />

                <RadioButton
                    android:id="@+id/listPreferenceRadioButtonValue2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listPreferenceRadioButtonValue2" />

                <RadioButton
                    android:id="@+id/listPreferenceRadioButtonValue3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listPreferenceRadioButtonValue3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aabbbb"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editTextSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/editTextSummary" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>